[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,11 +1,26 @@
 <html>
-<title>
-Krishnas Article One Page Title
-</title>
-<h>
-Hello!
-</h>
-<p>
-Good One!:-)
-</p>
+    <head>
+        <title>
+        Krishnas Article One Page Title
+        </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr>
+        <div>
+            Sep 26, 2016
+        </div>
+        <div>
+            <p>
+                This is the first article content. This is the first article content.This is the first article content.This is the first article content.This is the first article content.This is the first article content.
+            </p>
+            
+            <p>
+                This is the first article content second paragraph. This is the first article content second paragraph. This is the first article content second paragraph. This is the first article content second paragraph. This is the first article content second paragraph. This is the first article content second paragraph. This is the first article content second paragraph. This is the first article content second paragraph. 
+            </p>
+        </div>
+    </body>
 </html>
