[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,18 @@
         Krishnas Article One Page Title
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+            .container
+            {
+            max-width:800px;
+            margin: 0 auto;
+            color: grey;
+            font-family:sans-serif;
+            }
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -21,6 +31,7 @@
             <p>
                 This is the first article content second paragraph. This is the first article content second paragraph. This is the first article content second paragraph. This is the first article content second paragraph. This is the first article content second paragraph. This is the first article content second paragraph. This is the first article content second paragraph. This is the first article content second paragraph. 
             </p>
+        </div>
         </div>
     </body>
 </html>
