--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,8 +9,11 @@
             {
             max-width:800px;
             margin: 0 auto;
-            color: grey;
             font-family:sans-serif;
+            padding-left: 20px;
+            padding-right: 20px;
+            background-color: royalblue;
+            color: powderblue;
             }
         </style>
     </head>
