--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,18 +4,7 @@
         Krishnas Article One Page Title
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <style>
-            .container
-            {
-            max-width:800px;
-            margin: 0 auto;
-            font-family:sans-serif;
-            padding-left: 20px;
-            padding-right: 20px;
-            background-color: royalblue;
-            color: powderblue;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
