[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,24 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! This is Krishna!
+        <div class="container">
+            <div class="center">
+                <img src="http://ec.europa.eu/environment/chemicals/images/top_banner_nanomaterials.jpg" class="img-medium"/>
+            </div>
+            <br>
+            <hr>
+            <h3>Personal</h3>
+            <div class="center text-big bold">
+                Hi! This is Krishna!
+            </div>
+            <hr>
+            <div>
+                Hello
+            </div>
+            <hr>
+            <div>
+                
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
