--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img src="http://ec.europa.eu/environment/chemicals/images/top_banner_nanomaterials.jpg" class="img-medium"/>
+                <img id="k_img" src="http://ec.europa.eu/environment/chemicals/images/top_banner_nanomaterials.jpg" class="img-medium"/>
             </div>
             <br>
             <hr>
